--- a/Algorytms.tex
+++ b/Algorytms.tex
@@ -1,5 +1,5 @@
 \chapter{Gamma spectrum software analysis}
-As was mentioned before, the measured gamma spectrum contains many unwanted artifacts like noise, Compton continuum and edges, additional peaks created by various interactions. To properly obtain the count rates on defined energies the only way is to perform a numerical analysis of measured data.
+As was mentioned before, the measured gamma spectrum contains many unwanted artifacts like noise, Compton continuum and edges, additional peaks created by various interactions. To properly obtain the count rates on defined energies, the only way is to perform a numerical analysis of measured data.
 
 
 \section{Peak searching procedure}
