--- a/MossMeas.tex
+++ b/MossMeas.tex
@@ -1,1 +1,6 @@
 \chapter{Mössbauer spectra measurement}
+The good detection efficiency of 14.4 keV photons do not necessarily implies the good efficiency of MS spectra measurement. Effects which generate counts at  not corresponding to the 14.4 keV photons (for example Compton continuum, photons of different energies) decrease the SNR of MS measurement. To determine this efficiency, setup similar to one intended for MCA measurement is used again, however, additional parts has to be employed such transducer driven by MS spectrometer and a singlet sample placed into sample holder. 
+
+
+\par
+The detector's output is routed directly to the MS spectrometer, where the channel interval for 14.4 keV detection is selected. However, the previous MCA showed that this interval is different for every detector, so, to compare the detectors in MS efficiency, the interval has for MS is . We selected this interval as 90$\%$ of FWHM of 14.4 keV energy peak. 
