--- a/bp_dp.tex
+++ b/bp_dp.tex
@@ -231,9 +231,15 @@ In~Olomouc~\today   \hfill\parbox[t]{6cm}{\centering\null\dotfill\\\student}
 % -----------------------------------------------
 \chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
+In nuclear and particle physics, semiconductor-based detectors are becoming increasingly common due to the many unique properties they offer. Semiconductor radiation detectors have a very wide range of applications, from spectroscopy to large particle experiments such as ATLAS at CERN.  
 
+\par
+This thesis is dedicated to the development of a semiconductor detector based on a Si photodiode for the detection of low energy gamma photons. The detection of low-energy gamma photons plays a crucial role in the field of Mössbauer spectroscopy, which requires a detector with sufficient detection efficiency and energy resolution.
+\par
+The first four chapters are theoretical and provide a brief introduction to the mechanisms of gamma photon interaction and detection, the properties of semiconductor detectors and the basics of Mössbauer spectroscopy. These chapters are followed by a chapter describing the specifications of nuclear instruments used to build a spectrometric chain, and then a chapter introducing the numerical analysis of gamma energy spectra. 
 
-
+\par
+The experimental part begins with the gamma detection tests of selected photodiodes and is followed by a chapter filled with the technical description of the PCB integration of the spectrometric chain. The thesis ends with two chapters presenting the results of gamma energy spectra and Mössbauer spectra measurements.
 
 % -----------------------------------------------
 % Kapitoly lze ukládat do zvláštních souborů...
@@ -272,7 +278,7 @@ In~Olomouc~\today   \hfill\parbox[t]{6cm}{\centering\null\dotfill\\\student}
 \addcontentsline{toc}{chapter}{Conclusion}
 
  
-
+The development of PIN detector for MS spectroscopy can continue by employing the photodiodes with better detection efficiency, which could be achieved by using photodiode with greater thickness or by using different material with higher Z (for example Ge). To fully observe 6.4 keV photon peak on S14605 Si PIN, it will be necessary to employ a photodiode with lesser capacitance (greater thickness also impies lesser capacitance) or a preamplifier with a better characteristics.
 
 \par
 The work on thesis was both very hard and experiencing, and thus it can be compared to have to chug a bottle of 50$\%$ vodka - get sick, get experienced.
