--- a/citations.bib
+++ b/citations.bib
@@ -258,3 +258,19 @@ url       = {https://www.autodesk.com/products/eagle/overview?term=1-YEAR&tab=su
 urldate = {2024-2-3}, 
 language     = {english}
 }
+
+@online{star,
+author  = {Texas Instruments},
+title     = {Grounding in mixed-signal systems demystified, Part 1},
+url       = {https://www.ti.com/lit/an/slyt499/slyt499.pdf},
+urldate = {2024-4-22}, 
+language     = {english}
+}
+
+@online{OPA847,
+author  = {Texas Instruments},
+title     = {OPA847},
+url       = {https://www.ti.com/lit/ds/symlink/opa847.pdf},
+urldate = {2024-4-22}, 
+language     = {english}
+}
