--- a/bp_dp.tex
+++ b/bp_dp.tex
@@ -278,7 +278,9 @@ The experimental part begins with the gamma detection tests of selected photodio
 \addcontentsline{toc}{chapter}{Conclusion}
 
  
-The development of PIN detector for MS spectroscopy can continue by employing the photodiodes with better detection efficiency, which could be achieved by using photodiode with greater thickness or by using different material with higher Z (for example Ge). To fully observe 6.4 keV photon peak on S14605 Si PIN, it will be necessary to employ a photodiode with lesser capacitance (greater thickness also impies lesser capacitance) or a preamplifier with a better characteristics.
+It was proven, that even a cheap Si PIN photodiodes originally intended for detection of light can be employed as detectors for gamma spectroscopy. However, it was shown that the detection efficiency of these photodiodes is much worse than the detection efficiency of Si PIN photodiodes classified as radiation detectors.
+\par 
+The development of PIN detector for MS spectroscopy can continue by employing the photodiodes with better detection efficiency, which could be achieved by using Si photodiode with greater thickness or by using a different material with higher $Z$ (for example Ge). To fully observe 6.4 keV photon peak, it will be necessary to employ a photodiode with lesser capacitance (greater thickness also implies lesser capacitance) or a preamplifier with a better characteristics.
 
 \par
 The work on thesis was both very hard and experiencing, and thus it can be compared to have to chug a bottle of 50$\%$ vodka - get sick, get experienced.
