--- a/citations.bib
+++ b/citations.bib
@@ -274,3 +274,17 @@ url       = {https://www.ti.com/lit/ds/symlink/opa847.pdf},
 urldate = {2024-4-22}, 
 language     = {english}
 }
+@online{R6095,
+author  = {hamamatsu},
+title     = {Photomultiplier tubes R6094, R6095},
+url       = {https://www.hamamatsu.com/content/dam/hamamatsu-photonics/sites/documents/99_SALES_LIBRARY/etd/R6094_R6095_TPMH1382E.pdf},
+urldate = {2024-4-22}, 
+language     = {english}
+}
+@online{C9028,
+author  = {hamamatsu},
+title     = {HIGH VOLTAGE POWER SUPPLY SOCKET ASSEMBLY (DP-TYPE) C9028-01},
+url       = {https://www.digchip.com/datasheets/parts/datasheet/190/C9028-01-pdf.php},
+urldate = {2024-4-22}, 
+language     = {english}
+}
