--- a/PCBmeas.tex
+++ b/PCBmeas.tex
@@ -14,10 +14,10 @@ The onboard amplification is set in a way to have 14.4 keV energy peak in the se
 
 \section{Measurement setup}
 The measurement setup mainly consist of 3D printed parts - plastic holders for every detector and holders for radiation filters. All the holders have to be modular and easily interchangeable to allow the geometry to be kept same for every detector.
-$^{57}$Co 2020 source is mounted onto the transducer (switched off in this measurement). Due to the fact, that the detectors have a different size of detection area, the irradiation has to be done through a collimator. To compare detection efficiency of the defined detection surface, the detector is irradiated through a hole in a lead shielding, which works as collimator for $^{57}$Co source.
+$^{57}$Co 2020 source is mounted onto the transducer (switched off in this measurement). Due to the fact, that the detectors have a different size of detection area, the irradiation has to be done through a collimator. To compare detection efficiency of the defined detection surface, the detector is irradiated through a hole ($d = 4$ mm) in a lead shielding, which works as collimator for $^{57}$Co source.
 
 \par
-For every detector, the sequence of five measurement was performed - without filter, with three filters and without a source. The relative detection efficiency for 14.4 keV is determined by gaussian fit of the 14.4 keV peak in spectra with subtracted background. Every measurement of spectra ran 1200 s of live time.
+For every detector, the sequence of five measurement was performed - without filter, with three filters and without a source. The relative detection efficiency for 14.4 keV is determined by Gaussian fit of the 14.4 keV peak in spectra with subtracted background. Every measurement of spectra ran 1200 s of live time.
 
 
 \begin{figure}[H]
@@ -41,12 +41,12 @@ Three filters were placed before lead collimator - Cu (255 $\mu$m), Al (780 $\mu
 \end{figure}
 
 
-It can be seen, that the noise in spectrum is much lesser than in case of ORTEC setups. The part of 6.4 keV peak can be also seen. Various ways were performed in order to reduce noise - cooling by ice, improving the shielding etc. However, none of them resulted into 6.4 keV energy peak without noise. Main part of remaining noise probably arises from Si PIN diode capacity ($C_{\textrm{S14605}} \approx 25$ pF). This fact can be confirmed by using the same PCB with photodiode with smaller capacity (for example BPW34, $C_{\textrm{BPW34}} \approx 10$ pF). Spectra of BPW34 attached to PCB can be seen on fig.
+It can be seen, that the noise in spectrum is much lesser than in case of ORTEC setups. The part of 6.4 keV peak can be also seen. Various ways were performed in order to reduce noise - cooling by ice, improving the shielding etc. However, none of them resulted into 6.4 keV energy peak without noise. Main part of remaining noise probably arises from Si PIN diode capacity ($C_{\textrm{S14605}} \approx 25$ pF). This fact can be confirmed by using the same PCB with photodiode with smaller capacity (for example BPW34, $C_{\textrm{BPW34}} \approx 10$ pF). Spectra of BPW34 attached to PCB can be seen in the Fig.
 
 
 
-\section{Scintillator detector measurement}
-To measure the scintillator detector efficiency (type) the same setup was used. However, due to the mayor differences in detection mechanism, the spectrum is slightly different - the 14.4 keV peak is noticeably wider.
+\section{Scintillator and gaseous detector measurement}
+To measure the scintillator and the gaseous detector relative efficiency the same setup was used. As a gaseous detector was used tube LND45479, optimized for the 14.4 keV detection with amplification electronics based also on Cremat modules. In case of scintillator detector, our choice was photomultiplier tube R6095 \cite{R6095} with C9028-01 socket \cite{C9028}. As a scintillator crystal was used 0.4 mm thick YAP(Ce) and the amplification is done by the custom made amplifier\cite{STEJSKAL2019thesis}.
 
 \begin{figure}[H]
 \centering
@@ -54,10 +54,6 @@ To measure the scintillator detector efficiency (type) the same setup was used. 
 \caption{Scintillator $^{57}$Co spectra.}
 \label{Scintillator detector spectra.}
 \end{figure}
-
-
-\section{Gaseous detector measurement}
-As a gas detector was used tube (LND45479), optimized for the 14.4 keV detection.
 
 \begin{figure}[H]
 \centering
@@ -67,13 +63,18 @@ As a gas detector was used tube (LND45479), optimized for the 14.4 keV detection
 
 \end{figure}
 
+
+%In case of both detectors, both 14.4 keV and 6.4 keV peaks are fully observable. 
+In spectra of gaseous detector, three narrow peaks can be observed - 14.4 keV peak and two small peaks - 6.4 keV and 19.5 keV. It also has a high level of Compton continuum.
+The scintillator sees both 6.4 keV and 14.4 keV full energy peaks. However, its energy resolution is much worse - both peaks are noticeably wider and they overlap each other. 
+
 \section{Results}
 The sum of total counts for 14.4 keV and 6.4 keV full energy peaks along with the relative detection efficiency with respect to the most effective detector was calculated in the following way:
 
 \begin{enumerate}
 \item From the spectra without filter is subtracted the spectra with Cu filter. This provides a sufficient elimination of Compton continuum caused by 122 keV photons. 
-\item The spectra obtained in previous step is fitted by a sum of Gaussians. Each requires For gas spectra the sum of 3 Gaussians is used.
-\item The value of absolute counts (Gaussian's area) for the given energy spectra is calculated from the fit parameters with the uncertainties are also taken from the fit.
+\item The spectra obtained in previous step is fitted by a sum of Gaussians. Spectra of Si PIN and scintillator were fitted by sum of 2 Gaussians and in case of gas, the sum of 3 Gaussians is used.
+\item The value of absolute counts (Gaussian's area) for the given energy spectra is calculated from the fit parameters with the uncertainties also taken from the fit.
 \end{enumerate}
 
 
@@ -84,29 +85,33 @@ The sum of total counts for 14.4 keV and 6.4 keV full energy peaks along with th
 \begin{tabular}{|c|c|c|}
 \hline
    & absolute & relative \\ \hline
-Si PIN & $142783 \pm 2746.95$    & $0.290591 \pm 0.00767919$  \\ \hline
-gas & $231075 \pm 1473.42$    & $0.470281 \pm  0.00903226$ \\ \hline
-scintillator  & $491355 \pm 8901.75$    & $1$ \\ \hline
+Si PIN & $143000 \pm 3000$    & $0.291 \pm 0.008$  \\ \hline
+gas & $231000 \pm 2000$    & $0.48 \pm  0.01$ \\ \hline
+scintillator  & $491000 \pm 9000$    & $1$ \\ \hline
 \end{tabular}
-\caption{Table of calculated absolute and relative counts of 14.4 keV photons for every detector.}
+\caption{Table of calculated absolute and relative counts of 14.4 keV photons for each detector.}
  \label{144kevEFF}
 \end{table}
 
 
-The peak of 6.4 keV photons is not fully observable in the case of Si PIN detector. However, a raw estimation can be calculated using parameters obtained from Gaussian fit of partial 6.4 keV peak. Results in table \ref{64kevEFF} are considered to be only indicative. Note also that the setup wasn't designed to detect 6.4 keV photons - some detectors have slices of Al coating in .  
+The peak of 6.4 keV photons is not fully observable in the case of Si PIN detector. However, a rough estimation can be calculated using parameters obtained from Gaussian fit of partial 6.4 keV peak. Results in table \ref{64kevEFF} are considered to be only indicative. Note also that the setup wasn't designed to detect 6.4 keV photons - some detectors have slices of Al coating in detector window (Si PIN - ,scintillator - ,gas - window made of unknown metal).  
 
 \begin{table}[H]
 \centering
 \begin{tabular}{|c|c|c|}
 \hline
    & absolute & relative \\ \hline
-Si PIN & $272650 \pm 7436.96$    & $1$  \\ \hline
-gas & $20057.9 \pm 3389.6$    & $0.0735665 \pm 0.012593$ \\ \hline
-scintillator  & $184170 \pm 4606.45$    & $0.675483 \pm 0.0249984$ \\ \hline
+Si PIN & $273000 \pm 8000$    & $1$  \\ \hline
+gas & $20000 \pm 4000$    & $0.07 \pm 0.02$ \\ \hline
+scintillator  & $184000 \pm 5000$    & $0.68 \pm 0.03$ \\ \hline
 \end{tabular}
-\caption{Table of calculated absolute and relative counts of 6.4 keV photons for every detector.}
+\caption{Table of calculated absolute and relative counts of 6.4 keV photons for each detector.}
  \label{64kevEFF}
 \end{table}
+
+
+\par
+The results in table \ref{144kevEFF} show that the scintillator detector is the best detector for 14.4 keV photon among the three detectors that were tested. The Si PIN detector does not excel in detection of these energies and can be classified as the worst of the three. However, by the information provided by S14605 datasheet \cite{datS14605}, we come to a conclusion that the efficiency at 6.4 keV energies can be about 51 $\%$ better. This can be partially confirmed by rough estimations in table \ref{64kevEFF}, which describe the Si PIN as the best detector for 6.4 keV photons. To measure the full peak of 6.4 keV photons with S14605 photodiode, upgrades in electronics have to be made in order to increase the SNR, mainly the preamplifier has to be optimized for S14605's capacitance.
 
 
 
