--- a/MossMeas.tex
+++ b/MossMeas.tex
@@ -17,7 +17,7 @@ The three measurements (figures \ref{Si PIN detector MS spectra.}, \ref{Gas dete
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.125, angle = 0]{./pictures/MossSemi.png}
-\caption{Si PIN detector MS spectra.}
+\caption{Si PIN detector K$_{3}[$Fe(CN)$_{6}]$ MS spectra.}
 \label{Si PIN detector MS spectra.}
 
 \end{figure}
@@ -25,7 +25,7 @@ The three measurements (figures \ref{Si PIN detector MS spectra.}, \ref{Gas dete
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.125, angle = 0]{./pictures/MossGas.png}
-\caption{Gas detector MS spectra.}
+\caption{Gas detector K$_{3}[$Fe(CN)$_{6}]$ MS spectra.}
 \label{Gas detector MS spectra.}
 
 \end{figure}
@@ -33,11 +33,28 @@ The three measurements (figures \ref{Si PIN detector MS spectra.}, \ref{Gas dete
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.125, angle = 0]{./pictures/MossPMT.png}
-\caption{Scintillator detector MS spectra.}
+\caption{Scintillator detector K$_{3}[$Fe(CN)$_{6}]$ MS spectra.}
 \label{Scintillator detector MS spectra.}
 
 \end{figure}
 
 
-Every spectra is fitted by the Lorentzian in the form described by equation \ref{lor}. However, in order to compare the MS parameters between detectors, there was a problem with the different $\Gamma$ in every spectra, which is not caused by the detector, but probably by the transducer. If the SNR and $E_{\textrm{MC}}$ (equations \ref{SNR} and \ref{effect}), which both depend on $I$, are to be comparable between the measurements, it is necessary to recalculate the $I$ for every Lorentzian. The recalculation is based on the following consideration: The altered velocity signal can cause the variations in $\Gamma$ of a singlet Lorentzian curve, however, its area $A$ (total number of counts) given by equation \ref{area} should be left unchanged by this effect. So if the $A$ is conserved although the $\Gamma$ is changed, the new amplitudes $I_{rec}$ corresponding to the recalculated Lorentzians with the same $\Gamma_{\textrm{ref}}$  can be obtained by a simple relation $I_{rec} = \frac{\Gamma}{\Gamma_{ref}}I$. As a reference $\Gamma_{\textrm{ref}}$ is taken the smallest $\Gamma$ of the three detectors.
-The results obtained for every detector can be seen in following tab.
+Every spectra is fitted by the Lorentzian in the form described by equation \ref{lor}. However, in order to compare the MS parameters between detectors, there was a problem with the different $\Gamma$ in every spectra, which is not caused by the detector, but probably by the transducer. If the SNR and $E_{\textrm{MS}}$ (equations \ref{SNR} and \ref{effect}), which both depend on $I$, are to be comparable between the measurements, it is necessary to recalculate the $I$ for every Lorentzian. The recalculation is based on the following consideration: The altered velocity signal can cause the variations in $\Gamma$ of a singlet Lorentzian curve, however, its area $A$ (total number of counts) given by equation \ref{area} should be left unchanged by this effect. So if the $A$ is conserved although the $\Gamma$ is changed, the new amplitudes $I_{rec}$ corresponding to the recalculated Lorentzians with the same $\Gamma_{\textrm{ref}}$  can be obtained by a simple relation $I_{rec} = \frac{\Gamma}{\Gamma_{ref}}I$. As a reference $\Gamma_{\textrm{ref}}$ is taken the smallest $\Gamma$ of the three detectors.
+The results obtained for every detector can be seen in table \ref{mossres}.
+
+\begin{table}[H]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+   & SNR$_{\textrm{MS}}$ & $E_{\textrm{MS}}$ \\ \hline
+Si PIN & $273000 \pm 8000$    & $1$  \\ \hline
+gas & $20000 \pm 4000$    & $0.07 \pm 0.02$ \\ \hline
+scintillator  & $184000 \pm 5000$    & $0.68 \pm 0.03$ \\ \hline
+\end{tabular}
+\caption{Measured SNR$_{\textrm{MS}}$ and $E_{\textrm{MS}}$ for every detector.}
+ \label{mossres}
+\end{table}
+
+The results show that the best SNR$_{\textrm{MS}}$ has the scintillator detector, and thus when it comes to acquiring the MS spectra in transmission geometry, the Si PIN detector is not the best candidate. However, the highest $E_{\textrm{MS}}$ is associated with the Si PIN, and thus it can be employed in some applications where $E_{\textrm{MS}}$ is an important parameter. 
+
+
