--- a/bp_dp.tex
+++ b/bp_dp.tex
@@ -231,7 +231,7 @@ In~Olomouc~\today   \hfill\parbox[t]{6cm}{\centering\null\dotfill\\\student}
 % -----------------------------------------------
 \chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
-In nuclear and particle physics, semiconductor-based detectors are becoming increasingly common due to the many unique properties they offer. Semiconductor radiation detectors have a very wide range of applications, from spectroscopy to large particle experiments such as ATLAS at CERN.  
+In nuclear and particle physics, semiconductor-based detectors are becoming increasingly common due to the many unique properties they offer. Semiconductor detectors have a very wide range of applications, from spectroscopy to large particle experiments such as ATLAS at CERN.  
 
 \par
 This thesis is dedicated to the development of a semiconductor detector based on a Si photodiode for the detection of low energy gamma photons. The detection of low-energy gamma photons plays a crucial role in the field of Mössbauer spectroscopy, which requires a detector with sufficient detection efficiency and energy resolution.
@@ -277,10 +277,16 @@ The experimental part begins with the gamma detection tests of selected photodio
 \chapter*{Conclusion}
 \addcontentsline{toc}{chapter}{Conclusion}
 
- 
-It was proven, that even a cheap Si PIN photodiodes originally intended for detection of light can be employed as detectors for gamma spectroscopy. However, it was shown that the detection efficiency of these photodiodes is much worse than the detection efficiency of Si PIN photodiodes classified as radiation detectors.
+The first tests of Si PIN photodiodes were performed on setup consisting of ORTEC modular parts. All the three selected photodiodes (S14605, BPW34 and OPF430) produced spectrometric pulses and the gamma spectra of $^{57}$Co were successfully measured and interpreted. Characteristic full energy peaks of $^{57}$Co (14.4 keV, 122.1 keV and 136.5 keV) were observed as well as expected Compton continuum originating from Compton scattering of 122.1 keV inside the detector. It was found out, that the electromagnetic shielding plays a very important role in noise reduction. The Si PIN  photodiodes attached to charge preamplifier can not work properly without sufficient shielding. Cooling the photodiode also had an effect, but its significance was much lower.
+\par
+It was proven, that even a cheap Si PIN photodiode (BPW34 and OPF430) originally intended for detection of light can be employed as detector for gamma spectroscopy. However, it was shown that their detection efficiency is much worse than the detection efficiency of photodiode S14605, which is classified as x-ray detector.
+\par
+The front-end analog electronics for Si PIN detectors in form of PCB consisting of Cremat modules and SMD parts was successfully developed. This designed PCB placed into the shielding box integrates a significant part of spectrometric chain inside itself - PIN photodiode, the charge preamplifier, two amplification stages, the shaper and the high voltage supply for photodiode in form of a charge pump. For its functionality it requires only +15 V and -15 V power supply. Its output can be directly routed to the MCA. This Si PIN detector with integrated amplifier Int a full observation of 14.4 keV energy peak. The MS measurement setup employing constructed Si PIN detector was successfully assembled and the transmission MS spectra of a singlet sample was successfully measured.
+\par
+Two types of measurements were performed in order to compare the Si PIN detector with gaseous and scintillator detector - the measurement of 14.4 keV realative detection efficiency and the MS measurement. The only parameter of the Si PIN detector, which can be characterized as the best among the tested detectors is $E_{\textrm{MS}}$.
+
 \par 
-The development of PIN detector for MS spectroscopy can continue by employing the photodiodes with better detection efficiency, which could be achieved by using Si photodiode with greater thickness or by using a different material with higher $Z$ (for example Ge). To fully observe 6.4 keV photon peak, it will be necessary to employ a photodiode with lesser capacitance (greater thickness also implies lesser capacitance) or a preamplifier with a better characteristics.
+The development of PIN detector for transmission MS spectroscopy can continue by employing the photodiodes with better detection efficiency - by using Si photodiode with greater thickness or by using a photodiode made of a different material with higher $Z$ (for example Ge). To fully observe 6.4 keV energy peak, it will be necessary to employ a photodiode with lesser capacitance (greater thickness also implies lesser capacitance) or a preamplifier with a better characteristics. The development can also go on by the mathematical modelling of a better semiconductor detector for MS and by a theoretical simulations of its detection efficiency by using some of well-known programs for the simulation of passage of particles through matters such as the Geant4 \cite{Geant4}.
 
 \par
 The work on thesis was both very hard and experiencing, and thus it can be compared to have to chug a bottle of 50$\%$ vodka - get sick, get experienced.
