--- a/bp_dp.tex
+++ b/bp_dp.tex
@@ -286,7 +286,7 @@ The front-end analog electronics for Si PIN detectors in form of PCB consisting 
 Two types of measurements were performed in order to compare the Si PIN detector with gaseous and scintillator detector - the measurement of 14.4 keV realative detection efficiency and the MS measurement. The only parameter of the Si PIN detector, which can be characterized as the best among the tested detectors is $E_{\textrm{MS}}$.
 
 \par 
-The development of PIN detector for transmission MS spectroscopy can continue by employing the photodiodes with better detection efficiency - by using Si photodiode with greater thickness or by using a photodiode made of a different material with higher $Z$ (for example Ge). To fully observe 6.4 keV energy peak, it will be necessary to employ a photodiode with lesser capacitance (greater thickness also implies lesser capacitance) or a preamplifier with a better characteristics. The development can also go on by the mathematical modelling of a better semiconductor detector for MS and by a theoretical simulations of its detection efficiency by using some of well-known programs for the simulation of passage of particles through matters such as the Geant4 \cite{Geant4}.
+The development of PIN detector for transmission MS spectroscopy can continue by employing the photodiodes with better detection efficiency - by using Si photodiode with greater thickness or by using a photodiode made of a different material with higher $Z$ (for example Ge). To fully observe 6.4 keV energy peak, it will be necessary to employ a photodiode with lesser capacitance (greater thickness also implies lesser capacitance) or a preamplifier with a better characteristics. The development can also go on by the mathematical modelling of a better semiconductor detector for MS and by a theoretical simulations of its detection efficiency by using some of well-known programs for the simulation of passage of particles through matter such as the Geant4 \cite{Geant4}.
 
 \par
 The work on thesis was both very hard and experiencing, and thus it can be compared to have to chug a bottle of 50$\%$ vodka - get sick, get experienced.
