--- a/pulseAnalysis.tex
+++ b/pulseAnalysis.tex
@@ -5,32 +5,30 @@
 % -----------------------------------------------
 \chapter{Electronics for signal readout and analysis}
 % -----------------------------------------------
-The signals coming out the detector has to be properly preamplified, amplified and shaped. This is a very complicated task and it requires special analog circuits with properly designed layout. 
-In our case, we acquired these special instruments, modules and parts from two companies - ORTEC and CREMAT. When designing the spectrometric measurement chain, we select components in order to achieve sufficient parameters for our application - energy resolution, low dead time to increase maximum possible counting rates e.g. 
+The signals coming out the detector has to be properly preamplified, amplified and shaped. This  task requires special analog circuits with properly designed layout. 
+In our case, we use instruments, modules and parts from two companies - ORTEC and CREMAT. When designing the spectrometric measurement chain, we select components in order to achieve sufficient parameters for our application - energy resolution, low dead time to increase maximum possible counting rates e.g. 
 \par
-The task of realizing the spectrometric chain can be fulfilled in two ways. The first and more straightforward way is to build it from stand-alone robust instruments and modules. This can be more practical approach for testing of the detectors themselves since we are not forced to solve problems arising from badly designed PCBs. However, these modules are usually very expensive and measurement setups build this way are unnecessarily large.
+The task of realizing the spectrometric chain can be fulfilled in two ways. The first and more straightforward way is to build it from stand-alone robust instruments and modules. This can be more practical approach for testing of the detectors themselves since we are not forced to solve problems arising from badly designed electronic circuits. However, these modules are usually very expensive, measurement setups build this way are unnecessarily large and have worse noise parameters than electronic circuits specially tailored for the given application.
 \par
-The second possibility is to design PCB circuit with required functionalities from electronic parts, However it requires many electronic engineering skills and additional time for development. The analog PCBs are very hard to design. The pros are that the final product can be very compact, and the electronic parts and PCB manufacturing is much cheaper. 
-\par
-In this thesis, we apply both methods for the development.
+The second possibility is to design printed circuit board (PCB) with required functionalities from electronic parts, However it requires many electronic engineering skills and additional time for development. The analog PCBs are very hard to design. The pros are that the final product can be very compact, and the electronic parts and PCB manufacturing is much cheaper. In this thesis, we apply both methods for the development.
 
 
 
 \section{Diode detector connection and support electronics}
 \subsection{Voltage source}
-The p-n detectors require voltage bias to reduce the capacitance.
-These voltage sources don't have to be stiff since the detector's current consumption is very low and in pulses.
+The PN and PIN detectors require voltage bias to reduce the capacitance.
+These voltage sources don't have to be stiff since the detector's current consumption is very low.
 \par
-Gas and scintillation detectors usually require high voltage source. These high voltages are usually supplied by switching power supplies.
-However, these supplies are usually very noisy and since the semiconductors can be operated at much lower voltages, there is no need for them. The better alternative is charge pump build of capacitors and diodes, which requires lesser frequencies to operate.
+Gas and scintillation detectors usually require high voltage source (hundreds or thousands of volts). These high voltages are usually supplied by switching power supplies.
+However, these supplies are usually very noisy and since the semiconductors can be operated at much lower voltages, there is no need for them. The better alternative is charge pump build of capacitors and diodes, which requires lower frequencies to operate.
 \subsection{Shielding and grounding}
 
-In case of sensitive analog signal circuits, the shielding is a very important part.
+In case of sensitive analog signal circuits, the electromagnetic shielding is a very important part. Sensitive circuits have to be surrounded by a metallic material from all sides, which is also correctly connected to GND (principle of the Faraday cage), otherwise the proper functionality can not be guaranteed. The electromagnetic field from an outside source usually induces currents in the shielding material, and thus the special care has to be taken to prevent these induced currents from flowing through the signal routes. The figure \ref{shielding} shows the difference between correct and wrong connection of shielding.
 
 \begin{figure}[H]
  \centering
  \includegraphics[scale=0.35, angle = 0]{./pictures/shielding.png}
- \caption{Theoretical schematic of proper shielding \cite{appCSPnote}.}
+ \caption{Schematic of correct and wrong connection of shielding \cite{appCSPnote}.}
  \label{shielding}
  
 \end{figure}
@@ -41,19 +39,19 @@ In case of sensitive analog signal circuits, the shielding is a very important p
 To reduce thermal noise and achieve better SNR it is necessary to cool the detector. The cooling can be achieved by various ways. In most setups, the appropriate solution can be provided by a peltier cooler. These setups with peltier are the easy to implement, however, their cooling efficiency is highly dependent on the ability to sink the heat from the hot side.
 
 \section{Spectrometric chain}
-The measurement chain for gamma spectroscopy is usually realized in following order - gamma detector, preamplifier, amplifier, MCA, microprocessor/computer.
+The measurement chain for gamma spectroscopy is usually realized in following order - gamma detector, preamplifier, amplifier, multichannel analyser (MCA), microprocessor/computer.
 
 
 \begin{figure}[H]
  \centering
- \includegraphics[scale=0.35, angle = 0]{./pictures/NoPicture.jpg}
+ \includegraphics[scale=0.35, angle = 0]{./pictures/chain.png}
  \caption{Spectrometric chain.}
  \label{chain}
  
 \end{figure}
 
 \subsection{Pre-amplification}
-The signal coming out of the p-n detector is weak, and it is also in form of charge (current pulse), so it is necessary to convert it into voltage pulse. For performing the charge-voltage conversion, one and the best solution is circuit called charge amplifier. The principal functional scheme can be described by one opamp with a capacitor in feedback. The functionality is similar to $I/U$ transimpedance amplifier, but the charge amplifier works mainly as an integrator. In ideal case (opamp amplification $A >> 0$), the measured voltage per unit charge is approximately equal to:
+The signal coming out of the PIN detector is weak, and it is also in form of charge (current pulse), so it is necessary to convert it into voltage pulse. For performing the charge-voltage conversion, one and the best solution is circuit called charge amplifier. The principal functional scheme can be described by one opamp with a capacitor in feedback. The functionality is similar to $I/U$ transimpedance amplifier, but the charge amplifier works mainly as an integrator. In ideal case (opamp amplification $A >> 0$), the measured voltage per unit charge is approximately equal to:
 
 \begin{equation}
 \frac{dU}{dQ} = \frac{1}{C_{f}}.
@@ -71,10 +69,35 @@ The signal coming out of the p-n detector is weak, and it is also in form of cha
 
 
 \par
-In real circuit there is also a resistor parallel to the feedback capacitor. The feedback resistor slowly discharges the capacitor after a accumulation of charge, restoring the transimpedance amplifier to be ready to capture another pulse.  
+In real circuit there is also a resistor parallel to the feedback capacitor. The feedback resistor slowly discharges the capacitor after a accumulation of charge, restoring the transimpedance amplifier to be ready to capture another pulse.
+
+\begin{figure}[H]
+ \centering
+ \includegraphics[scale=0.4, angle = 0]{./pictures/NoiseEquiv.png}
+ \caption{Noise equivalent circuit for charge amplifier. Taken from \cite{charge}.}
+ \label{trans}
+ 
+\end{figure}
 
 
-However, the functionality is also negatively affected by the detector's capacitance $C_{det}$.
+However, the functionality is also negatively affected by noise, which is dependent on including the detector's capacitance $C_{\textrm{det}}$. Thermal noise dependency on $C_{\textrm{det}}$ of the first-stage FET transistor can be approximated by equation \cite{charge}:
+
+\begin{equation}
+en_1 = \sqrt{\frac{8}{3}\frac{KT}{gm}}
+\end{equation}
+
+
+\begin{equation}
+in = \sqrt{2q(I_{\textrm{G}} + I_{\textrm{D}})}
+\end{equation}
+
+\begin{equation}
+en_2 = \sqrt{4KTRf}
+\end{equation}
+
+%\begin{equation}
+%ent^2(j \omega) = en_1^2 \cdot (1+\frac{C_{\textrm{in}}}{C_{\textrm{f}}) + \{ \}\frac{1}{(j \omega C_{\textrm{f}})^2}
+%\end{equation}
 
 \par
 The charge sensitive preamplifiers modules usually also contain the second stage - classical $U/U$ amplifier. The internal scheme of CR-110-R2 charge sensitive preamplifier made by Cremat Inc, which we use in the case of PCB design can be seen of fig. \ref{internal}.
